--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -12,19 +12,19 @@ html {
 body {
   min-width: 320px;
   min-height: 100vh;
-  font-family: Arial, sans-serif;
+  font-family: Inter, sans-serif;
   background-color: $second-color;
   color: $main-color;
+  font-weight: 400;
 }
 
-
-img, svg {
+img,
+svg {
   display: block;
   max-width: 100%;
   max-height: 100%;
   height: auto;
 }
-
 
 button {
   padding: 0;
@@ -32,6 +32,7 @@ button {
   background-color: transparent;
   border: none;
   color: inherit;
+  display: block;
 }
 
 a {
@@ -77,8 +78,34 @@ iframe {
 Чтобы контент не прижимался к краям экрана
 */
 
+main {
+  margin-bottom: 120px;
+
+  @include tablet {
+  margin-bottom: 80px;
+  }
+
+  @include mobile {
+    margin-bottom: 60px;
+  }
+}
+
 .container {
-  max-width: 1240px;
-  padding: 0 30px;
+  --max-width: 1180px;
+  --padding: 30px;
+  max-width: calc(var(--max-width) + var(--padding) * 2);
+  padding: 0 var(--padding);
   margin: 0 auto;
+
+  @include laptop {
+    --max-width: 880px;
+  }
+
+  @include tablet {
+    --max-width: 620px;
+  }
+
+  @include mobile {
+    --padding: 15px;
+  }
 }
