--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,9 @@
 @import 'style/hero';
 @import 'style/goods';
 @import 'style/product';
-@import 'style/color';
 @import 'style/footer';
+@import 'style/color';
 @import 'style/search';
 @import 'style/favorite';
+@import 'style/card';
+@import 'style/count';
