--- a/src/index.scss
+++ b/src/index.scss
@@ -7,11 +7,17 @@
 @import 'style/gender';
 @import 'style/category';
 @import 'style/hero';
+@import 'style/color';
+@import 'style/count';
+@import 'style/size';
+@import 'style/cart';
+@import 'style/radio';
+@import 'style/order';
+@import 'style/main-button';
+@import 'style/item';
 @import 'style/goods';
 @import 'style/product';
 @import 'style/footer';
-@import 'style/color';
 @import 'style/search';
 @import 'style/favorite';
 @import 'style/card';
-@import 'style/count';
