--- a/src/style/_card.scss
+++ b/src/style/_card.scss
@@ -1,4 +1,5 @@
 .card {
+  display: none;
   margin-bottom: 100px;
 
   &__container {
@@ -140,28 +141,35 @@
 
   &__color-item {
     cursor: pointer;
+    width: 24px;
+    height: 24px;
+
+    &:after {
+      width: 16px;
+      height: 16px;
+    }
   }
 
   &__size {
     margin-bottom: 24px;
-
+  
     @include tablet {
       margin-bottom: 16px;
     }
-
+  
     @include mobile {
       margin-bottom: 12px;
     }
   }
-
+  
   &__size-title {
     margin-bottom: 8px;
-
+  
     @include tablet {
       margin-bottom: 10px;
     }
   }
-
+  
   &__size-list {
     display: flex;
     gap: 4px;
@@ -170,12 +178,14 @@
     line-height: 17px;
     text-transform: uppercase;
   }
-
+  
   &__size-item {
-    display: block;
-    padding: 2px 14px;
-    border: 1px solid $main-color;
     cursor: pointer;
+
+    &_active {
+      background-color: $main-color;
+      color: $second-color;
+    }
   }
 
   &__description {
